--- a/src/styles.css
+++ b/src/styles.css
@@ -11,16 +11,19 @@ input {
 }
 
 body {
-  background-color: black;
+  background-color: white;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-size: 14px;
-  color: white;
+  color: black;
 }
 
 button {
   background-color: white;
-  color: black;
+  color: rgb(65, 65, 65);
+  margin: 0px 5px;
+  border: 1px solid gray;
+  border-radius: 10%;
 }
 
 a {
@@ -32,6 +35,18 @@ form {
   width: 100%;
 }
 
+footer {
+  margin-bottom: 500px;
+  text-align: center;
+  color: rgb(82, 82, 82);
+}
+
+hr {
+  width: 1000px;
+  background-color: gray;
+  opacity: 50%;
+}
+
 .nweet-input::placeholder {
   color: white;
   opacity: 0.9;
@@ -39,10 +54,13 @@ form {
 
 .container {
   width: 100%;
-  max-width: 320px;
+  /* max-width: 320px; */
   display: flex;
   flex-direction: column;
+  margin: 10px auto;
+  /* justify-content: center; */
 }
+
 
 .formInput {
   width: 100%;
@@ -52,10 +70,10 @@ form {
   text-align: center;
   background-color: white;
   color: black;
+  margin: auto;
 }
 
 .formBtn {
-  cursor: pointer;
   width: 100%;
   padding: 7px 20px;
   text-align: center;
@@ -63,6 +81,7 @@ form {
   border-radius: 20px;
   background-color: #04aaff;
   cursor: pointer;
+  margin: auto;
 }
 
 .cancelBtn {
@@ -75,13 +94,20 @@ form {
 .profileForm {
   border-bottom: 1px solid rgba(255, 255, 255, 0.9);
   padding-bottom: 30px;
-  width: 100%;
+  width: 80%;
   display: flex;
   flex-direction: column;
+  margin: auto;
+}
+
+.profile_label {
+  font-size: 14px;
+  margin: 10px;
+  text-align: left;
 }
 
 .logOut {
-  margin-top: 50px;
+  margin: 50px 0 50px 0;
 }
 
 /* Nwitter Factory */
@@ -100,14 +126,14 @@ form {
   flex-wrap: wrap;
   position: relative;
   margin-bottom: 20px;
-  width: 100%;
+  width: 80%;
 }
 
 .factoryInput__input {
   flex-grow: 1;
   height: 40px;
   padding: 0px 20px;
-  color: white;
+  color: black;
   border: 1px solid #04aaff;
   border-radius: 20px;
   font-weight: 500;
@@ -171,26 +197,35 @@ form {
   margin-bottom: 20px;
   background-color: white;
   width: 100%;
-  max-width: 320px;
+  /* max-width: 320px; */
   padding: 20px;
   border-radius: 10px;
+  border: 1px solid #04aaff;
   position: relative;
   display: flex;
   flex-direction: column;
   color: rgba(0, 0, 0, 0.8);
+  margin-bottom: 40px;
+}
+
+.nweet h5 {
+  font-size: 10px;
+  margin-bottom: 5px;
+  color:#0071aa ;
 }
 
 .nweet h4 {
-  font-size: 14px;
+  font-size: 15px;
+  margin-top: 5px;
 }
 
 .nweet img {
-  right: -10px;
+  /* right: 0px; */
   top: 20px;
-  position: absolute;
-  border-radius: 50%;
-  width: 50px;
-  height: 50px;
+  /* position: absolute; */
+  /* border-radius: 50%; */
+  width: 30%;
+  height: 30%;
   margin-top: 10px;
 }
 
@@ -241,20 +276,22 @@ form {
 
 .authInput {
   max-width: 320px;
-  width: 100%;
+  width: 300px;
+  height: 40px;
   padding: 10px;
   border-radius: 30px;
   background-color: rgba(255, 255, 255, 1);
   margin-bottom: 10px;
   font-size: 12px;
-  color: black;
+  border: 1px solid gray;
 }
 
 .authSubmit {
   text-align: center;
   background: #04aaff;
   color: white;
-  margin-top: 10px;
+  margin-top: 10;
+margin-top: 10px;
   cursor: pointer;
 }
 
@@ -262,7 +299,7 @@ form {
   color: tomato;
   text-align: center;
   font-weight: 500;
-  font-size: 12px;
+  font-size: 11px;
 }
 
 .authSwitch {
